microk8s/infrastructure/overlays/traefik-ingress/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  namespace: traefik-ingress-dev
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-opa-auth@kubernetescrd
spec:
  rules:
    - host: demo-dev.manhlam.name.vn
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: user-bff-svc
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-fe-svc
                port:
                  number: 3000
    - host: kafka-admin.manhlam.name.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 9090
